kubernetes/argo-cd/projects/nebius/production-hm/object-storage-browser/environments/production/kubernetes-manifests/hm-object-storage-browser-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hm-object-storage-browser-deployment
  namespace: production-hm-object-storage-browser
  labels:
    app.kubernetes.io/name: object-storage-browser
    app.kubernetes.io/part-of: production-hm-object-storage-browser
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: object-storage-browser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: object-storage-browser
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: caddy
          image: harbor.hongbomiao.com/docker-hub-proxy-cache/caddy:2.10.2-alpine
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            allowPrivilegeEscalation: false
            capabilities:
              add: ["NET_BIND_SERVICE"]
              drop: ["ALL"]
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: caddyfile-volume
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
              readOnly: true
            - name: production-data-raw-volume
              mountPath: /srv/production-data-raw
            - name: production-data-processed-volume
              mountPath: /srv/production-data-processed
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: caddyfile-volume
          configMap:
            name: hm-object-storage-browser-caddyfile-config-map
        - name: production-data-raw-volume
          persistentVolumeClaim:
            claimName: production-data-raw-persistent-volume-claim
        - name: production-data-processed-volume
          persistentVolumeClaim:
            claimName: production-data-processed-persistent-volume-claim
