kubernetes/argo-cd/projects/nebius/production-hm/object-storage-browser/environments/production/kubernetes-manifests/hm-object-storage-browser-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hm-object-storage-browser-service
  namespace: production-hm-object-storage-browser
  labels:
    app.kubernetes.io/name: object-storage-browser
    app.kubernetes.io/part-of: production-hm-object-storage-browser
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: object-storage-browser
  ports:
    - name: http
      protocol: TCP
      targetPort: http
      port: 8080
